--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=Buzz
 version=1.0.0
 author=Connor Nishijima
 maintainer=Connor Nishijima <connornishijima@gmail.com>
-sentence=AC-based motion detection using only the ADC and a wire
+sentence=AC/static electricity-based motion detection using only the ADC and a wire! 
 paragraph=By monitoring the amplitude of AC electricity waveforms in the air for changes, Buzz provides motion detection using only a wire!
 category=Sensors
 url=https://github.com/connornishijima/arduino-buzz
